created chat interface component

--- a/components/general-interface.html
+++ b/components/general-interface.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="navbar.css" />
     <!-- ========================button component stylesheet ============-->
     <link rel="stylesheet" href="button.css" />
+
+    <!-- typography -->
+    <link rel="stylesheet" href="typography.css" />
   </head>
   <body>
     <!-- ===================Begining of navbar====================== -->
