--- a/components/interface-card.html
+++ b/components/interface-card.html
@@ -6,9 +6,211 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="interface-card.css" />
+
+    <!-- =============================color-scheme==================== -->
+    <link rel="stylesheet" href="color-scheme.css" />
+
+    <!-- ===================navbar================================================ -->
+    <link rel="stylesheet" href="navbar.css" />
+
+    <!-- ========================typography=============================== -->
+    <link rel="stylesheet" href="typography.css" />
+
+    <!-- ========================button============================ -->
+    <link rel="stylesheet" href="button.css" />
   </head>
   <body>
-    the interface card compnent will have a thumbnail, a title, a little center
-    img (social icon), description and button
+    <!-- ===================Begining of navbar====================== -->
+    <header class="header">
+      <nav class="nav d-flex-space-b ninety-percent">
+        <div class="nav-logo">
+          <img src="../images/top-logo.svg" alt="" />
+        </div>
+
+        <ul class="nav-menu d-flex-space-b">
+          <li class="nav-item">
+            <a href="#" class="nav-link">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">WhatsApp</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">Instagram</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">Facebook</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">Tiktok</a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">Twitter</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"
+              >More
+              <img src="../images/more-icon.svg" alt="" class="more-icon" />
+              <ul class="sub-menu">
+                <li>About Us</li>
+                <li>Privacy</li>
+                <li>Contact</li>
+              </ul>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- =========================End of navbar======================= -->
+    <div class="main-container ninety-percent">
+      <div class="interface-card-container">
+        <h1 class="card-heading">Chat Interface</h1>
+        <p class="interface-desc">choose any interface of your choice</p>
+
+        <div class="cards-container">
+          <div class="card">
+            <div class="card-thmb">
+              <img src="../images/whatsapp-thmb.svg" alt="" class="card-img" />
+              <img
+                src="../images/whatsapp-inner-logo.svg"
+                alt=""
+                class="center-img"
+              />
+            </div>
+            <div class="card-details">
+              <h4 class="card-title">Generate WhatsApp Fake Chat</h4>
+              <p class="card-desc">
+                Get to generate fake whatsapp chat to prank Your friends.
+                Generate realistic and convincing fake chats in just a few
+                clicks. Customize profiles, chat bubbles, and timestamps to
+                create a chat that looks just like the real thing
+              </p>
+              <div class="button-container">
+                <button class="inactive-button">Generate WhatsApp Chat</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-thmb">
+              <img src="../images/instagram-thmb.svg" alt="" class="card-img" />
+              <img
+                src="../images/Instagram-inner-logo.svg"
+                alt=""
+                class="center-img"
+              />
+            </div>
+            <div class="card-details">
+              <h4 class="card-title">Generate Instagram Fake Chat</h4>
+              <p class="card-desc">
+                Get to generate fake whatsapp chat to prank Your friends.
+                Generate realistic and convincing fake chats in just a few
+                clicks. Customize profiles, chat bubbles, and timestamps to
+                create a chat that looks just like the real thing
+              </p>
+              <div class="button-container">
+                <button class="inactive-button">Generate Instagram Chat</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-thmb">
+              <img src="../images/twitter-thmb.svg" alt="" class="card-img" />
+              <img
+                src="../images/twitter-inner-logo.svg"
+                alt=""
+                class="center-img"
+              />
+            </div>
+            <div class="card-details">
+              <h4 class="card-title">Generate TwitterFake Chat</h4>
+              <p class="card-desc">
+                Get to generate fake whatsapp chat to prank Your friends.
+                Generate realistic and convincing fake chats in just a few
+                clicks. Customize profiles, chat bubbles, and timestamps to
+                create a chat that looks just like the real thing
+              </p>
+              <div class="button-container">
+                <button class="inactive-button">Generate Twitter Chat</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-thmb">
+              <img src="../images/snapchat-thmb.svg" alt="" class="card-img" />
+              <img
+                src="../images/snapchat-inner-logo.svg"
+                alt=""
+                class="center-img"
+              />
+            </div>
+            <div class="card-details">
+              <h4 class="card-title">Generate Snapchat Fake Chat</h4>
+              <p class="card-desc">
+                Get to generate fake whatsapp chat to prank Your friends.
+                Generate realistic and convincing fake chats in just a few
+                clicks. Customize profiles, chat bubbles, and timestamps to
+                create a chat that looks just like the real thing
+              </p>
+              <div class="button-container">
+                <button class="inactive-button">Generate Snapchat Chat</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-thmb">
+              <img src="../images/facebook-thmb.svg" alt="" class="card-img" />
+              <img
+                src="../images/facebook-inner-logo.svg"
+                alt=""
+                class="center-img"
+              />
+            </div>
+            <div class="card-details">
+              <h4 class="card-title">Generate Facebook Fake Chat</h4>
+              <p class="card-desc">
+                Get to generate fake whatsapp chat to prank Your friends.
+                Generate realistic and convincing fake chats in just a few
+                clicks. Customize profiles, chat bubbles, and timestamps to
+                create a chat that looks just like the real thing
+              </p>
+              <div class="button-container">
+                <button class="inactive-button">Generate Facebook Chat</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-thmb">
+              <img src="../images/tiktok-thmb.svg" alt="" class="card-img" />
+              <img
+                src="../images/tiktok-inner-logo.svg"
+                alt=""
+                class="center-img"
+              />
+            </div>
+            <div class="card-details">
+              <h4 class="card-title">Generate Tiktok Fake Chat</h4>
+              <p class="card-desc">
+                Get to generate fake whatsapp chat to prank Your friends.
+                Generate realistic and convincing fake chats in just a few
+                clicks. Customize profiles, chat bubbles, and timestamps to
+                create a chat that looks just like the real thing
+              </p>
+              <div class="button-container">
+                <button class="inactive-button">Generate tiktok Chat</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
