--- a/components/landing-page-layout.html
+++ b/components/landing-page-layout.html
@@ -6,34 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="landing-page-layout.css" />
+    <link rel="stylesheet" href="typography.css" />
+
+    <link rel="stylesheet" href="color-scheme.css" />
+
+    <link rel="stylesheet" href="button.css" />
+    <link rel="stylesheet" href="typography.css" />
+
+    <link rel="stylesheet" href="navbar.css" />
   </head>
   <body>
     <!-- DIV FOR COMPONENTS LIKE THE HOW TO SECTION AND FEATURES SECTION -->
-    <div class="features mb-md primary-color">
-      <h2 class="mb-md features__heading">Features</h2>
-      <p class="features__text">
-        With its easy-to-use interface and variety of features, you can create
-        realistic and convincing fake chats in just a few clicks. See features
-        Below
-      </p>
-    </div>
-
-    <!-- THE GRID SECTION FOR LANDING PAGE THAT HIGLIGHTS THE DIFFERENT SERVICES -->
-    <div class="features__descriptions">
-      <div class="features__descriptions--img">
-        <img src="/images/instagram-illustration.svg" alt="" />
-      </div>
-      <div class="features__descriptions--cont">
-        <h2 class="features__descriptions--title">
-          Generate Fake WhatsApp Chats
-        </h2>
-        <p class="features__descriptions--text mb-lg">
-          Our Fake WhatsApp Chat feature allows you to generate
-          authentic-looking conversations that will fool even the most observant
-          of friends. With customizable profiles, chat bubbles, and timestamps,
-          you can create a convincing chat that looks just like the real thing.
+    <div class="main-container ninety-percent">
+      <div class="features mb-md primary-color">
+        <h2 class="mb-md features__heading">Features</h2>
+        <p class="features__text">
+          With its easy-to-use interface and variety of features, you can create
+          realistic and convincing fake chats in just a few clicks. See features
+          Below
         </p>
-        <a class="" href="">Generate WhatsApp Chat</a>
+      </div>
+
+      <!-- THE GRID SECTION FOR LANDING PAGE THAT HIGLIGHTS THE DIFFERENT SERVICES -->
+      <div class="layout-container">
+        <div class="layout-container--img">
+          <img src="../images/instagram-illustration.svg" alt="" />
+        </div>
+        <div class="layout-container-descriptions">
+          <h4 class="layout-container-descriptions--title">
+            Generate Fake WhatsApp Chats
+          </h4>
+          <p class="layout-container-descriptions--text mb-lg">
+            Our Fake WhatsApp Chat feature allows you to generate
+            authentic-looking conversations that will fool even the most
+            observant of friends. With customizable profiles, chat bubbles, and
+            timestamps, you can create a convincing chat that looks just like
+            the real thing.
+          </p>
+          <button class="inactive-button">Generate WhatsApp Chat</button>
+        </div>
       </div>
     </div>
   </body>
