--- a/components/general-interface.html
+++ b/components/general-interface.html
@@ -142,7 +142,7 @@
               </div>
             </div>
             <div class="android">
-              <header class="android-header">
+              <header class="mobile-header">
                 <div class="android-tasbar d-flex-space-b">
                   <div class="android-time time">12:00pm</div>
 
