--- a/components/general-interface.html
+++ b/components/general-interface.html
@@ -162,6 +162,9 @@
           </div>
         </div>
       </div>
+      <div class="btn-container">
+        <button class="inactive-button move-btn">Download Chat as Image</button>
+      </div>
     </div>
   </body>
 </html>
