--- a/components/navbar.html
+++ b/components/navbar.html
@@ -94,6 +94,18 @@
     <!-- =========================End of navbar======================= -->
     <div class="main-container ninety-percent"></div>
     <!-- also copy this script and paste in your code -->
+
+    <footer class="footer">
+      <div class="main-container ninety-percent d-flex-space-b">
+        <a href="../index.html" class="logo"
+          ><img src="../images/top-logo.svg" alt="" class="footer-logo"
+        /></a>
+
+        <a href="https://github.com/Andarson-Brel/fake-chat-generator"
+          ><img src="../images/github-logo.svg" alt="" class="github"
+        /></a>
+      </div>
+    </footer>
     <script src="../javascript/navbar.js"></script>
   </body>
 </html>
