--- a/components/interface-card.css
+++ b/components/interface-card.css
@@ -8,7 +8,7 @@
   margin: 1rem 0;
 }
 .cards-container {
-  margin-top: 5rem;
+  margin-top: 3rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 5rem;
@@ -42,4 +42,23 @@
 .card-desc {
   margin: 2rem 0;
   color: var(--primary-color-light);
+}
+@media (max-width: 1000px) {
+  .cards-container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 750px) {
+  .cards-container {
+    grid-template-columns: 1fr;
+  }
+  .card {
+    width: 100%;
+  }
+  .card-thmb {
+    width: 100%;
+  }
+  .card-img {
+    width: 100%;
+  }
 }
