--- a/components/landing-page-layout.css
+++ b/components/landing-page-layout.css
@@ -59,6 +59,7 @@
 }
 .layout-container-descriptions {
   width: 50%;
+  margin-bottom: 3rem;
 }
 @media only screen and (max-width: 57.25em) {
   .layout-container {
