--- a/css/whatsapp.css
+++ b/css/whatsapp.css
@@ -1,5 +1,5 @@
 .task-bar {
-  padding: 4px 5px;
+  padding: 1rem;
   background-color: #ffff;
 }
 
@@ -42,8 +42,8 @@
   z-index: 10;
 }
 .i-chat__profile-pic {
-  border-radius: 100%;
-  width: 35px;
+  width: 40px;
+  height: 40px;
   object-fit: cover;
 }
 .i-chat__bubble {
@@ -149,14 +149,9 @@
 }
 /*======= END OF IPHONE CHAT UI ====== */
 /* ==================================== */
-
-.iphone.active {
-  display: none;
-}
-
-/* /////////////////////// */
-.android.active {
-  display: none;
+.whatsappname {
+  color: white;
+  font-size: 1.2rem;
 }
 .android {
   margin: 0 auto;
@@ -167,10 +162,9 @@
 }
 .android-header {
   width: 100%;
-  height: 80px;
 }
 .android-taskbar {
-  padding: 5px;
+  padding: 1rem;
   background-color: #054c44;
   color: #fff;
 }
@@ -187,15 +181,18 @@
   position: relative;
   width: 24px;
   height: 11px;
-  border: 2px solid black;
+  border: 2px solid white;
   border-radius: 3px;
   padding: 1px;
+}
+.android-battery {
+  background-color: white;
 }
 .android-dash {
   position: absolute;
   width: 2px;
   height: 4px;
-  background: black;
+  background: white;
   border-radius: 0 2px 2px 0;
   right: -5px;
   top: 45%;
@@ -292,4 +289,10 @@
 }
 .a-chat__input::-webkit-scrollbar {
   display: none;
+}
+.username-status {
+  margin-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
