--- a/css/whatsapp.css
+++ b/css/whatsapp.css
@@ -118,6 +118,9 @@
   color: rgba(0, 0, 0, 0.5);
   outline: none;
 }
+.i-chat__input--div {
+  width: 100%;
+}
 .i-chat__input:focus {
   border: 1px solid rgba(0, 0, 0, 0.15);
   outline: none;
@@ -213,7 +216,7 @@
 }
 
 .a-chat__bubble {
-  width: 80%;
+  max-width: 80%;
   border-radius: 10px;
   padding: 1.2rem 1.2rem 1.7rem;
   font-size: 1.4rem;
