--- a/css/snapchat.css
+++ b/css/snapchat.css
@@ -91,9 +91,7 @@
   padding: 7px;
   border-radius: 100%;
 }
-.iphone.active {
-  display: none;
-}
-.android.active {
-  display: none;
+.profile-photo {
+  width: 30px;
+  height: 30px;
 }
