--- a/css/telegram.css
+++ b/css/telegram.css
@@ -42,10 +42,9 @@
   position: absolute;
   bottom: 0;
 }
-.iphone.active {
-  display: none;
+.battery-percentage-iphone {
+  background-color: black;
 }
-
 .i-chat__input-section {
   position: absolute;
   bottom: 120px;
@@ -79,9 +78,6 @@
   top: 15px;
   right: 15px;
 }
-.android.active {
-  display: none;
-}
 
 .android {
   margin: 0 auto;
@@ -89,11 +85,19 @@
   height: 700px;
   background: #fff;
 }
-.android-header {
+.mobile-header {
   width: 100%;
-  height: 80px;
+  background-color: #517da2;
 }
-
+.android-network-battery img {
+  color: white;
+}
+.android-time {
+  color: white;
+}
+.android-battery-container .battery-percentage {
+  background-color: #fff;
+}
 .android-taskbar {
   padding: 5px;
   background-color: #426382;
