--- a/css/instagram.css
+++ b/css/instagram.css
@@ -85,10 +85,12 @@
     rgba(117, 48, 203, 1) 100%
   );
   color: #fff;
+  /* border-radius: 0 0 20px 20px; */
   border-radius: 20px 0 20px 20px;
 }
 .mess-l {
   background-color: rgba(0, 0, 0, 0.06);
+  /* border-radius: 20px 20px 0 0; */
   border-radius: 0 20px 20px 20px;
 }
 .mess .message-time-r,
