--- a/css/whatsapp.css
+++ b/css/whatsapp.css
@@ -49,9 +49,9 @@
 .i-chat__bubble {
   background-color: var(--background-color);
   border-radius: 13px;
-  padding: 0.5rem 1rem 1.15rem;
-  font-size: 1.4rem;
-  margin: 0.4rem 1.5rem;
+  padding: 1.2rem;
+  font-size: 1.6rem;
+  margin: 0.8rem 1.5rem;
   position: relative;
   min-width: 30%;
   max-width: 80%;
@@ -217,15 +217,15 @@
   color: #fff;
 }
 .back {
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .a-chat__bubble {
   border-radius: 10px;
-  padding: 0.8rem 0.8rem 1.5rem;
-  font-size: 1.4rem;
+  padding: 1.2rem;
+  font-size: 1.6rem;
   line-height: 2.4rem;
-  margin: 0.4rem 1.5rem;
+  margin: 0.8rem 1.5rem;
   position: relative;
   min-width: 30%;
   max-width: 80%;
