--- a/css/snapchat.css
+++ b/css/snapchat.css
@@ -72,7 +72,10 @@
   right: 10px;
   transform: translate(-50% -50%);
 }
-
+.snap-user {
+  font-size: 16px;
+  font-weight: 600;
+}
 .iphone-bottom {
   width: 100%;
   background: #f6f6f6;
