--- a/css/whatsapp.css
+++ b/css/whatsapp.css
@@ -53,7 +53,7 @@
   font-size: 1.6rem;
   margin: 0.8rem 1.5rem;
   position: relative;
-  min-width: 30%;
+  min-width: 20%;
   max-width: 80%;
   display: table-cell;
 }
@@ -98,6 +98,7 @@
 }
 .ur-msg {
   color: #007aff;
+  font-size: 16px;
 }
 
 .i-chat__input-section {
@@ -227,7 +228,7 @@
   line-height: 2.4rem;
   margin: 0.8rem 1.5rem;
   position: relative;
-  min-width: 30%;
+  min-width: 20%;
   max-width: 80%;
   display: table-cell;
 }
@@ -308,4 +309,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+}
+.username {
+  font-weight: 500;
+  font-size: 16px;
 }
